frontend bug fixes
workdlow/Id SCROLLBAR fix , landing page button fix

--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -109,3 +109,12 @@
 
   
 }
+
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE 10+ */
+  scrollbar-width: none;     /* Firefox */
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;             /* Chrome, Safari, Opera */
+}
